fix: добавить z-index для popup

--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -7,4 +7,5 @@
     top: 0;
     position: fixed;
     display: none;
+    z-index: 2;
 }
